--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,12 @@ body{
 
 .bg-blue{background: #233a95;}
 
+@media (min-width: 1300px){
+.container, .container-lg, .container-md, .container-sm, .container-xl{
+    max-width: 1200px;
+}
+}
+
 .headerWrapper .top-strip{padding: 8px 0px;}
 .headerWrapper .top-strip p {
   color: #fff;
@@ -15,7 +21,7 @@ body{
 .headerWrapper .header{
   width: 100%;
   height: auto;
-  padding:15px 0px;
+  padding:25px 0px;
 }
 .logoWrapper img{ width: 100%;}
 
@@ -40,3 +46,16 @@ header .part3 .circle svg{font-size: 22px;}
 .cartTab button{background: #fff1ee !important;} 
 .cartTab button svg{color: #ea2b0f !important;}
 .cartTab .count{position: absolute; top: -6px; right: -4px; background: #ea2b0f; border-radius: 50%; color: #fff; width: 20px; height: 20px;}
+
+nav .allCatTab{background: #2bbef9; padding: 10px 15px !important; border-radius: 30px !important;}
+nav .allCatTab *{color: #fff;}
+nav .allCatTab:hover{background: #2bbef9;}
+nav .allCatTab .text{font-weight: 600;}
+
+nav .allCatTab .icon1 svg{font-size: 20px !important;}
+nav .allCatTab .icon2 svg{font-size: 15px !important;}
+nav .navPart2 ul{margin-bottom: 0px;}
+
+nav .navPart2 ul li a{font-size: 15px; font-weight: 600; text-decoration: none; color: rgba(0,0,0,0.7); text-transform:uppercase; display: flex; align-items: center; padding: 8px 15px; transition: all 0.2s ease-in-out; border-radius: 25px;}
+nav .navPart2 ul li a svg{font-size: 20px;}
+nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
