--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ body{
 }
 }
 
+::-webkit-scrollbar{width: 8px !important; height: 8px !important; }
+::-webkit-scrollbar-thumb{background: #ccc !important;}
+::-webkit-scrollbar-track{background: transparent !important;}
+
 .headerWrapper .top-strip{padding: 8px 0px;}
 .headerWrapper .top-strip p {
   color: #fff;
@@ -31,13 +35,13 @@ body{
 .headerWrapper .header .part2 .countryDrop .label{font-size: 12px !important; text-transform:capitalize !important; color: rgba(0,0,0,0.4) !important; line-height: 16px;}
 .headerWrapper .header .part2 .countryDrop .name{font-size: 14px !important; text-transform:capitalize !important; color: #233a95 !important; font-weight: 700; line-height: 16px;}
 .headerWrapper .header .part2 .countryDrop span.ml-auto svg{opacity: 0.7;}
-header .headerSearch{width: 60%; height: 50px; background: #f3f4f7; padding: 5px; position: relative; border-radius: 5px; border: 1px solid rgba(0,0,0,0.1)}
-header .headerSearch input{background: transparent !important; outline: none !important; font-size: 18px; color: rgba(0,0,0,0.8); width: 100%; height: px; border: 0px !important; padding: 0px 20px !important;}
+ .headerSearch{width: 60%; height: 50px; background: #f3f4f7; padding: 5px; position: relative; border-radius: 5px; border: 1px solid rgba(0,0,0,0.1)}
+ .headerSearch input{background: transparent !important; outline: none !important; font-size: 18px; color: rgba(0,0,0,0.8); width: 100%; height: px; border: 0px !important; padding: 0px 20px !important;}
 
-header .headerSearch input::-webkit-input-placeholder{color: rgba(0,0,0,0.6);}
+ .headerSearch input::-webkit-input-placeholder{color: rgba(0,0,0,0.6);}
 
-header .headerSearch button {position: absolute; top: 10px; right: 15px; z-index: 100; min-width: 40px !important; height: 40px !important; width: 40px !important; border-radius: 50% !important; color: #000;}
-header .headerSearch button svg{font-size: 30px;}
+ .headerSearch button {position: absolute; top: 10px; right: 10px; z-index: 100; min-width: 40px !important; height: 40px !important; width: 40px !important; border-radius: 50% !important; color: #000;}
+ .headerSearch button svg{font-size: 25px; opacity: 0.8;}
 
 header .part3 .circle{align-items: center; justify-content: center; min-width: 45px !important; height: 45px !important; width: 45px !important; border-radius: 50% !important; border: 1px solid rgba(0,0,0,0.1) !important; color: #000;}
 header .part3 .circle svg{font-size: 22px;}
@@ -47,6 +51,16 @@ header .part3 .circle svg{font-size: 22px;}
 .cartTab button svg{color: #ea2b0f !important;}
 .cartTab .count{position: absolute; top: -6px; right: -4px; background: #ea2b0f; border-radius: 50%; color: #fff; width: 20px; height: 20px;}
 
+.locationModal .MuiPaper-elevation{padding: 25px; position: relative;}
+.locationModal .countryList{ margin-bottom: 0px; max-height:400px ; overflow-y: scroll; overflow-x: hidden;}
+.locationModal .countryList li{width: 100px; list-style: none;}
+.locationModal .countryList li button{width: 100%; text-transform: capitalize !important; color: #000 !important; justify-content: flex-start !important; padding: 15px 20px !important;}
+
+.locationModal .close_{position: absolute; top: 20px; right: 10px; color: #000 !important; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
+.locationModal .close_ svg{font-size: 22px;}
+
+nav .navPart1{max-width: 20%; flex: 0 0 20%}
+nav .navPart2{max-width: 80%; flex: 0 0 80%}
 nav .allCatTab{background: #2bbef9; padding: 10px 15px !important; border-radius: 30px !important;}
 nav .allCatTab *{color: #fff;}
 nav .allCatTab:hover{background: #2bbef9;}
@@ -56,6 +70,7 @@ nav .allCatTab .icon1 svg{font-size: 20px !important;}
 nav .allCatTab .icon2 svg{font-size: 15px !important;}
 nav .navPart2 ul{margin-bottom: 0px;}
 
-nav .navPart2 ul li a{font-size: 15px; font-weight: 600; text-decoration: none; color: rgba(0,0,0,0.7); text-transform:uppercase; display: flex; align-items: center; padding: 8px 15px; transition: all 0.2s ease-in-out; border-radius: 25px;}
+nav .navPart2 ul li a{text-decoration: none;}
+nav .navPart2 ul li a button{font-size: 14px !important; font-weight: 600; text-decoration: none; color: rgba(0,0,0,0.6); text-transform:uppercase; display: flex; align-items: center; padding: 8px 15px; transition: all 0.2s ease-in-out; border-radius: 25px;}
 nav .navPart2 ul li a svg{font-size: 20px;}
 nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
