--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ body{
 ::-webkit-scrollbar-thumb{background: #ccc !important;}
 ::-webkit-scrollbar-track{background: transparent !important;}
 
+.headerWrapper{border-bottom: 1px solid rgba(0,0,0,0.1); padding-bottom: 10px;}
+
 .headerWrapper .top-strip{padding: 8px 0px;}
 .headerWrapper .top-strip p {
   color: #fff;
@@ -51,26 +53,32 @@ header .part3 .circle svg{font-size: 22px;}
 .cartTab button svg{color: #ea2b0f !important;}
 .cartTab .count{position: absolute; top: -6px; right: -4px; background: #ea2b0f; border-radius: 50%; color: #fff; width: 20px; height: 20px;}
 
+nav .navPart1{max-width: 20%; flex: 0 0 20%;}
+nav .navPart1{max-width: 80%; flex: 0 0 80%;}
+
 .locationModal .MuiPaper-elevation{padding: 25px; position: relative;}
 .locationModal .countryList{ margin-bottom: 0px; max-height:400px ; overflow-y: scroll; overflow-x: hidden;}
 .locationModal .countryList li{width: 100px; list-style: none;}
 .locationModal .countryList li button{width: 100%; text-transform: capitalize !important; color: #000 !important; justify-content: flex-start !important; padding: 15px 20px !important;}
+
+.locationModal .countryList li button:hover {background: #f1f1f1;}
+.locationModal .countryList li button.active {background: #e2e2e2 !important;}
 
 .locationModal .close_{position: absolute; top: 20px; right: 10px; color: #000 !important; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
 .locationModal .close_ svg{font-size: 22px;}
 
 nav .navPart1{max-width: 20%; flex: 0 0 20%}
 nav .navPart2{max-width: 80%; flex: 0 0 80%}
-nav .allCatTab{background: #2bbef9; padding: 10px 15px !important; border-radius: 30px !important;}
+nav .allCatTab{background: #2bbef9; padding: 10px 12px !important; border-radius: 30px !important;}
 nav .allCatTab *{color: #fff;}
 nav .allCatTab:hover{background: #2bbef9;}
 nav .allCatTab .text{font-weight: 600;}
 
 nav .allCatTab .icon1 svg{font-size: 20px !important;}
 nav .allCatTab .icon2 svg{font-size: 15px !important;}
-nav .navPart2 ul{margin-bottom: 0px;}
 
+nav .navPart2 ul{margin-bottom: 0px;}
 nav .navPart2 ul li a{text-decoration: none;}
-nav .navPart2 ul li a button{font-size: 14px !important; font-weight: 600; text-decoration: none; color: rgba(0,0,0,0.6); text-transform:uppercase; display: flex; align-items: center; padding: 8px 15px; transition: all 0.2s ease-in-out; border-radius: 25px;}
+nav .navPart2 ul li a button{font-size: 14px !important; font-weight: 600; text-decoration: none; color: rgba(0,0,0,0.6); text-transform:uppercase; display: flex; align-items: center; padding: 8px 13px; transition: all 0.2s ease-in-out; border-radius: 25px;}
 nav .navPart2 ul li a svg{font-size: 20px;}
 nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
