--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 *{margin: 0px; padding: 0px;}
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css');
 body{
   font-family:"Lato", sans-serif;
 }
@@ -71,13 +74,13 @@ nav .navPart1{max-width: 20%; flex: 0 0 20%}
 nav .navPart2{max-width: 80%; flex: 0 0 80%}
 
 nav .navPart1 .catWrapper{position: relative;}
-nav .navPart1 .catWrapper .sidebarNav{width: 100%; height: opx; opacity: 0; background: #fff; position: absolute; top: 136%; left: 0px; border: 1px solid rgba(0,0,0,0.1); padding: 15px 0px; transition: all 0.2s; visibility: hidden;}
+nav .navPart1 .catWrapper .sidebarNav{width: 100%; height: opx; opacity: 0; background: #fff; position: absolute; top: 136%; left: 0px; border: 1px solid rgba(0,0,0,0.1); padding: 15px 0px; transition: all 0.2s; visibility: hidden; z-index: 100;}
 
 nav .navPart1 .catWrapper .sidebarNav li{width: 100%; list-style: none; padding: 0px 15px;}
 nav .navPart1 .catWrapper .sidebarNav li button{color: #000; width: 100%; justify-content: flex-start; text-transform: capitalize !important;}
 nav .navPart1 .catWrapper .sidebarNav li button:hover{background: transparent !important;}
 
-nav .navPart1 .catWrapper .sidebarNav.open{height: 100%; opacity: 1; visibility: inherit;}
+nav .navPart1 .catWrapper .sidebarNav.open{height: auto; opacity: 1; visibility: inherit;}
 
 nav .allCatTab{background: #2bbef9; padding: 10px 12px !important; border-radius: 30px !important;}
 nav .allCatTab *{color: #fff;}
@@ -95,10 +98,18 @@ nav .navPart2 ul li a svg{font-size: 20px;}
 nav .navPart2 ul li a:hover{background: #f0faff; color: #2bbef9;}
 
 nav .navPart2 ul li{position: relative;}
-nav .navPart2 ul li .submenu{position: absolute; top: 150%; left: 0px; min-width: 200px; background: #fff; opacity: 0; visibility: hidden; transition: all 0.2s ease-in-out;}
+nav .navPart2 ul li .submenu{position: absolute; top: 150%; left: 0px; min-width: 200px; background: #fff; opacity: 0; visibility: hidden; transition: all 0.2s ease-in-out; z-index: 100;}
 nav .navPart2 ul li .submenu a{display: block; width: 100%;}
 nav .navPart2 ul li .submenu a button{width: 100%; justify-content: flex-start !important;
 border-radius: 0px !important; text-transform: capitalize !important; font-weight: 600 !important;}
 nav .navPart2 ul li .submenu a button:hover{background: #f1f1f1 !important;}
 nav .navPart2 ul li a svg{font-size: 20px;}
 nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
+
+.homeBannerSection{position: relative; overflow: hidden;}
+.homeBannerSection *{outline: none !important;}
+.homeBannerSection .slick-arrow{position: absolute; top: 45%; z-index: 100; display: flex; align-items:  center; justify-content: center; width: 40px !important; height: 40px !important; background: #524c4c; border-radius: 100%; font-family: FontAwesome !important ;}
+.homeBannerSection .slick-arrow.slick-next{right: 25px !important;}
+.homeBannerSection .slick-arrow.slick-prev{left: 25px !important;}
+.homeBannerSection .slick-arrow.slick-next::before{font-family: FontAwesome !important ; color: #fff;}
+.homeBannerSection .slick-arrow.slick-prev::before{font-family: FontAwesome !important ; color: #fff;}
