--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css');
 body{
-  font-family:"Lato", sans-serif;
+  font-family:"Lato", sans-serif; font-size: 14px; color: rgba(0,0,0,0.8);
 }
 
 .bg-blue{background: #233a95;}
@@ -15,6 +15,9 @@ body{
 }
 }
 
+.cursor{cursor: pointer;}
+.text-light{color: #393737 !important;}
+.text-sml{font-size: 14px;}
 ::-webkit-scrollbar{width: 8px !important; height: 8px !important; }
 ::-webkit-scrollbar-thumb{background: #ccc !important;}
 ::-webkit-scrollbar-track{background: transparent !important;}
@@ -78,8 +81,13 @@ nav .navPart1 .catWrapper .sidebarNav{width: 100%; height: opx; opacity: 0; back
 
 nav .navPart1 .catWrapper .sidebarNav li{width: 100%; list-style: none; padding: 0px 15px;}
 nav .navPart1 .catWrapper .sidebarNav li button{color: #000; width: 100%; justify-content: flex-start; text-transform: capitalize !important;}
+nav .navPart1 .catWrapper .sidebarNav li button svg{font-size: 12px; opacity: 0.6;}
 nav .navPart1 .catWrapper .sidebarNav li button:hover{background: transparent !important;}
 
+nav .navPart1 .catWrapper .sidebarNav ul li{position: static;}
+nav .navPart1 .catWrapper .sidebarNav ul li .submenu{position: absolute; top: 0px; left: 101%; width: 250px; height: 100%; background: #fff; z-index: 100; padding-right: 15px; opacity: 0; visibility: hidden;transition: all 0.2 ease-in-out; border-left: 1px solid rgba(0,0,0,0.1);}
+nav .navPart1 .catWrapper .sidebarNav ul li:hover .submenu{opacity: 1; visibility: inherit; left: 100%;}
+nav .navPart1 .catWrapper .sidebarNav ul li .submenu button{border-radius: 0px !important;}
 nav .navPart1 .catWrapper .sidebarNav.open{height: auto; opacity: 1; visibility: inherit;}
 
 nav .allCatTab{background: #2bbef9; padding: 10px 12px !important; border-radius: 30px !important;}
@@ -108,8 +116,41 @@ nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 
 .homeBannerSection{position: relative; overflow: hidden;}
 .homeBannerSection *{outline: none !important;}
-.homeBannerSection .slick-arrow{position: absolute; top: 45%; z-index: 100; display: flex; align-items:  center; justify-content: center; width: 40px !important; height: 40px !important; background: #524c4c; border-radius: 100%; font-family: FontAwesome !important ;}
+.homeBannerSection .slick-arrow{position: absolute; top: 45%; z-index: 100; display: flex; align-items:  center; justify-content: center; width: 40px !important; height: 40px !important; background: #524c4c; border-radius: 100%; font-family: FontAwesome !important ; font-weight: bold; box-shadow: 0 1px 3px rgb(0 0 0 / 24%) !important;}
 .homeBannerSection .slick-arrow.slick-next{right: 25px !important;}
 .homeBannerSection .slick-arrow.slick-prev{left: 25px !important;}
 .homeBannerSection .slick-arrow.slick-next::before{font-family: FontAwesome !important ; color: #fff;}
 .homeBannerSection .slick-arrow.slick-prev::before{font-family: FontAwesome !important ; color: #fff;}
+
+.homeProducts{padding: 25px 0px; width: 100%;}
+.homeProducts .banner{width: 100%; border-radius: 10px; overflow: hidden;}
+
+.productRow .hd{font-size: 20px; font-weight: 600;}
+.viewAllBtn{padding: 5px 25px !important; background: #fff; border: 1px solid rgba(0,0,0,0.1) !important; border-radius: 30px !important; color: #000 !important; font-weight: 600; text-transform: capitalize !important;}
+
+.viewAllBtn svg{font-size: 20px;}
+
+.productItem{width: 100%; height: auto; border: 1px solid rgba(0,0,0,0.1); cursor: pointer; position: relative;}
+.productItem .badge{display: inline-block; padding: 7px 10px; position: absolute; top: 10px; left: 10px; z-index: 100;}
+
+.productItem .info{padding: 15px;}
+.productItem .info h4{font-size: 15px; font-weight: 600;}
+.productItem .info .oldPrice{font-size: 16px; font-weight: bold; color: rgba(0,0,0,0.3); text-decoration: line-through;}
+.productItem .info .netPrice{font-size: 16px; font-weight: bold;}
+
+.productItem .actions{position: absolute; top: 20px; right: -100%; z-index: 1000; display: flex; flex-direction: column; gap: 10px; transition: all 0.3s ease-in-out;}
+.productItem .actions button{display: flex; align-items: center; justify-content: center; min-width: 40px !important; height: 40px !important; width: 40px !important; border: 1px solid rgba(0,0,0,0.1) !important; border-radius: 50% !important; background: #fff !important; box-shadow: 0 1px 3px rgb(0 0 0 / 24%) !important; transition: all 0.0s !important;}
+.productItem .actions button svg{color: #000 !important; opacity: 0.7; pointer-events: none; font-size: 15px;}
+.productItem .actions button:hover{background:#233a95 !important;}
+.productItem .actions button:hover svg{color:#fff !important;}
+
+.productItem .imgWrapper{overflow: hidden;}
+.productItem .imgWrapper img{transition: all 0.3s ease-in-out;}
+.productItem .imgWrapper:hover .actions{opacity: 1; right: 10px;}
+.productItem .imgWrapper:hover img{transform: scale(1.1);}
+
+.productRow .productItem{border-right: 1px solid transparent !important;}
+.productRow .swiper-slide:last-child .productItem{border: 1px solid rgba(0,0,0,0.1) !important; }
+.swiper{padding-right: 1px !important;}
+
+.badge-primary{background: #2bbef9 !important;}
