realizacion  de banner y productos con fondo de colores

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css');
 body{
-  font-family:"Lato", sans-serif; font-size: 14px; color: rgba(0,0,0,0.8);
+  font-family:"Lato", sans-serif; font-size: 14px; color: rgba(0,0,0,0.8); overflow-x: hidden;
 }
 
 .bg-blue{background: #233a95;}
@@ -125,7 +125,7 @@ nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 .homeProducts{padding: 25px 0px; width: 100%;}
 .homeProducts .banner{width: 100%; border-radius: 10px; overflow: hidden;}
 
-.productRow .hd{font-size: 20px; font-weight: 600;}
+.hd{font-size: 20px; font-weight: 600;}
 .viewAllBtn{padding: 5px 25px !important; background: #fff; border: 1px solid rgba(0,0,0,0.1) !important; border-radius: 30px !important; color: #000 !important; font-weight: 600; text-transform: capitalize !important;}
 
 .viewAllBtn svg{font-size: 20px;}
@@ -154,3 +154,16 @@ nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 .swiper{padding-right: 1px !important;}
 
 .badge-primary{background: #2bbef9 !important;}
+
+.homeCat{padding: 35px 0px;}
+.homeCat .swiper{overflow: inherit !important;}
+.homeCat .swiper .item{padding: 15px; width: 100%; height: auto; border-radius: 10px;}
+.homeCat .swiper .item img{width: 80%;}
+
+.homeCat .swiper-button-prev, .homeCat .swiper-button-next{top: -30px !important; width: 30px !important; height: 30px !important;}
+.homeCat .swiper-button-prev{right: 68px !important; left: inherit !important;}
+.homeCat .swiper-button-prev::after, .homeCat .swiper-button-next::after{font-size: 12px;}
+.productRow2{flex-wrap: wrap; gap: 10px;}
+.productRow2 .productItem{width: 24%; overflow: hidden; border-right: 1px solid rgba(0,0,0,0.1) !important;}
+.bannerSec{gap: 15px;}
+.sticky{position: sticky; top: 10px; z-index: 100;}
