--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body{
 }
 
 .cursor{cursor: pointer;}
-.text-light{color: #393737 !important;}
+.text-light{color: #717171 !important;}
 .text-sml{font-size: 14px;}
 ::-webkit-scrollbar{width: 8px !important; height: 8px !important; }
 ::-webkit-scrollbar-thumb{background: #ccc !important;}
@@ -167,3 +167,13 @@ nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 .productRow2 .productItem{width: 24%; overflow: hidden; border-right: 1px solid rgba(0,0,0,0.1) !important;}
 .bannerSec{gap: 15px;}
 .sticky{position: sticky; top: 10px; z-index: 100;}
+.newsLetterSection{width: 100%; height: auto; background: #233a95; position: relative; overflow: hidden; padding: 70px 0px;}
+.newsLetterSection .col-md-6{position: static !important;}
+.newsLetterSection p{font-size: 18px; margin: 10px 0px !important;}
+.newsLetterSection h3{font-size: 35px; font-weight: bold;}
+.newsLetterSection p.text-light{color: #fff !important; opacity: 0.5; font-size: 15px;}
+.newsLetterSection img{position: absolute; bottom: 0px; right: 0px;}
+.newsLetterSection form{width: 100%; height: 60px; background: #fff; padding: 10px; position: relative;}
+.newsLetterSection form svg{position: absolute; top: 17px; left: 10px; font-size: 25px; opacity: 0.3;}
+.newsLetterSection form input{width: 100%; height: 100%; background: #fff !important; outline: none !important; border: 0px; padding-left: 40px; padding-right: 200px; }
+.newsLetterSection form button{position: absolute; top: 6px; right: 7px; background: #233a95 !important; font-size: 16px !important; padding: 12px 25px !important; color: #fff; text-transform: capitalize !important; font-weight: 600 !important;}
