--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,7 @@ nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 .productRow2 .productItem{width: 24%; overflow: hidden; border-right: 1px solid rgba(0,0,0,0.1) !important;}
 .bannerSec{gap: 15px;}
 .sticky{position: sticky; top: 10px; z-index: 100;}
+
 .newsLetterSection{width: 100%; height: auto; background: #233a95; position: relative; overflow: hidden; padding: 70px 0px;}
 .newsLetterSection .col-md-6{position: static !important;}
 .newsLetterSection p{font-size: 18px; margin: 10px 0px !important;}
@@ -177,3 +178,21 @@ nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 .newsLetterSection form svg{position: absolute; top: 17px; left: 10px; font-size: 25px; opacity: 0.3;}
 .newsLetterSection form input{width: 100%; height: 100%; background: #fff !important; outline: none !important; border: 0px; padding-left: 40px; padding-right: 200px; }
 .newsLetterSection form button{position: absolute; top: 6px; right: 7px; background: #233a95 !important; font-size: 16px !important; padding: 12px 25px !important; color: #fff; text-transform: capitalize !important; font-weight: 600 !important;}
+
+footer{width: 100%; height: 500px; margin: auto; background: #fff; padding: 25px 0px;}
+
+footer .topInfo{border-bottom: 1px solid rgba(0,0,0,0.2); padding-bottom: 20px;}
+footer .topInfo .col{padding: 10px 15px; padding-left: 40px; border-right: 1px solid rgba(0,0,0,0.2);}
+footer .topInfo .col:last-child{border-right: 0px;}
+footer .topInfo .col svg{font-size: 26px;}
+footer .topInfo .col span{font-size: 14px; font-weight: 600;}
+
+footer .linksWrap h5{font-size: 15px; margin-bottom: 20px; font-weight: 600;}
+footer .linksWrap ul li{list-style: none; margin-bottom: 10px;}
+footer .linksWrap ul li a{color: #71778e; font-size: 13px;}
+footer .linksWrap ul li a:hover{text-decoration: none;}
+
+footer .copyright ul li a{display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 50%; border: 1px solid rgba(0,0,0,0.1);}
+footer .copyright ul li a svg{font-size: 18px; color: rgba(0,0,0,0.8);}
+footer .copyright ul li a:hover{background: #2bbef9 !important;}
+footer .copyright ul li a:hover svg{color: #fff !important;}
