modal para producto en donde hay imagenes con zoom

--- a/src/App.css
+++ b/src/App.css
@@ -70,8 +70,8 @@ nav .navPart1{max-width: 80%; flex: 0 0 80%;}
 .locationModal .countryList li button:hover {background: #f1f1f1;}
 .locationModal .countryList li button.active {background: #e2e2e2 !important;}
 
-.locationModal .close_{position: absolute; top: 20px; right: 10px; color: #000 !important; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
-.locationModal .close_ svg{font-size: 22px;}
+.close_{position: absolute !important; top: 20px; right: 10px; color: #000 !important; min-width: 40px !important; width: 40px !important; height: 40px !important; border-radius: 50% !important;}
+.close_ svg{font-size: 22px;}
 
 nav .navPart1{max-width: 20%; flex: 0 0 20%}
 nav .navPart2{max-width: 80%; flex: 0 0 80%}
@@ -114,7 +114,9 @@ nav .navPart2 ul li .submenu a button:hover{background: #f1f1f1 !important;}
 nav .navPart2 ul li a svg{font-size: 20px;}
 nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 
-.homeBannerSection{position: relative; overflow: hidden;}
+.homeBannerSection{position: relative;}
+.homeBannerSection .swiper{overflow: inherit !important;}
+.homeBannerSection .swiper .item{overflow: hidden; border-radius: 10px;}
 .homeBannerSection *{outline: none !important;}
 .homeBannerSection .slick-arrow{position: absolute; top: 45%; z-index: 100; display: flex; align-items:  center; justify-content: center; width: 40px !important; height: 40px !important; background: #524c4c; border-radius: 100%; font-family: FontAwesome !important ; font-weight: bold; box-shadow: 0 1px 3px rgb(0 0 0 / 24%) !important;}
 .homeBannerSection .slick-arrow.slick-next{right: 25px !important;}
@@ -135,8 +137,10 @@ nav .navPart2 ul li:hover .submenu{opacity: 1; visibility: inherit; top: 100%;}
 
 .productItem .info{padding: 15px;}
 .productItem .info h4{font-size: 15px; font-weight: 600;}
-.productItem .info .oldPrice{font-size: 16px; font-weight: bold; color: rgba(0,0,0,0.3); text-decoration: line-through;}
-.productItem .info .netPrice{font-size: 16px; font-weight: bold;}
+.info .oldPrice{font-size: 16px; font-weight: bold; color: rgba(0,0,0,0.3); text-decoration: line-through;}
+.info .oldPrice.lg{font-size: 20px}
+.info .netPrice{font-size: 16px; font-weight: bold;}
+.info .netPrice-lg{font-size: 20px}
 
 .productItem .actions{position: absolute; top: 20px; right: -100%; z-index: 1000; display: flex; flex-direction: column; gap: 10px; transition: all 0.3s ease-in-out;}
 .productItem .actions button{display: flex; align-items: center; justify-content: center; min-width: 40px !important; height: 40px !important; width: 40px !important; border: 1px solid rgba(0,0,0,0.1) !important; border-radius: 50% !important; background: #fff !important; box-shadow: 0 1px 3px rgb(0 0 0 / 24%) !important; transition: all 0.0s !important;}
@@ -196,3 +200,18 @@ footer .copyright ul li a{display: flex; align-items: center; justify-content: c
 footer .copyright ul li a svg{font-size: 18px; color: rgba(0,0,0,0.8);}
 footer .copyright ul li a:hover{background: #2bbef9 !important;}
 footer .copyright ul li a:hover svg{color: #fff !important;}
+
+
+.productModal .MuiPaper-elevation{padding: 25px; position: relative; max-width: 1000px !important; width: 900px !important;}
+
+.productModal h4{font-size: 22px !important; color: rgba(0,0,0,0.8) !important;}
+
+.productZoom{width: 100%; height: auto; border: 1px solid rgba(0,0,0,0.1); padding: 0px; overflow: hidden; border-radius: 15px;}
+.zoomSliderBig{width: 100% !important;}
+
+.zoomSlider{padding-top: 30px;}
+.zoomSlider .slick-slide {padding-right: 20px !important;}
+.zoomSlider *{outline: none !important;}
+.zoomSlider .item{border: 2px solid transparent !important; overflow: hidden; border-radius: 15px; cursor: pointer;}
+.zoomSlider .slick-current .item{border: 2px solid #3bb77e !important;}
+.zoomSlider .slick-arrow{top: 55% !important; zoom: 80% !important;}
