#13 se agrego clase css .zoomSlider .slick-arrow.slick-next & prev

--- a/src/App.css
+++ b/src/App.css
@@ -215,3 +215,5 @@ footer .copyright ul li a:hover svg{color: #fff !important;}
 .zoomSlider .item{border: 2px solid transparent !important; overflow: hidden; border-radius: 15px; cursor: pointer;}
 .zoomSlider .slick-current .item{border: 2px solid #3bb77e !important;}
 .zoomSlider .slick-arrow{top: 55% !important; zoom: 80% !important;}
+.zoomSlider .slick-arrow.slick-next{right: -2% !important;}
+.zoomSlider .slick-arrow.slick-prev{left: -5% !important;}
